vpc.tf
module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "3.12.0"

  name = "${var.application}-vpc"
  cidr = "10.0.0.0/16"

  azs             = ["${var.default_region}a", "${var.default_region}b", "${var.default_region}c"]
  private_subnets = ["10.0.1.0/24"]
  public_subnets  = ["10.0.101.0/24"]

  enable_nat_gateway = true
  enable_vpn_gateway = true

  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Terraform   = "true"
    Environment = var.environment
  }
}

data "aws_availability_zones" "available" {}

resource "aws_route" "internet_access" {
  route_table_id         = module.vpc.vpc_main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = module.vpc.igw_id
}

resource "aws_eip" "ccf" {
  instance = module.ec2_instance.id
  vpc      = true

  depends_on = [
    module.vpc.igw_id
  ]

  lifecycle {
    prevent_destroy = false
  }

  tags = {
    Name = "ccf-eip-${var.environment}"
  }
}

resource "aws_route_table" "private" {
  count  = length(data.aws_availability_zones.available.names)
  vpc_id = module.vpc.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = module.vpc.natgw_ids[0]
  }
}
